# test-wasm

./: .gitignore  Cargo.toml
src/: lib.rs
wit/: world.wit
