[package]
name = "github_fdw_quickstart"
version = "0.2.89"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi = "0.13.2"
wit-bindgen-rt = "0.26.0"

[package.metadata.component]
package = "my-company:github-fdw-quickstart"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
